Допилил ConsoleApp, а так же поправил некоторые файлы, что бы приложение работалоч